2004-01-03  Ronald Bultje  <rbultje@ronald.bitfreak.net>

	* gst/gstelement.c: (gst_element_class_add_pad_template):
	  Refuse registering a pad template if another pad template
	  with the same name already exists (#114715).

2004-01-02  David Schleef  <ds@schleef.org>

	* gst/gstcaps.c: (_gst_structure_is_equal_foreach),
	(gst_caps_is_equal_fixed): Add new function.
	* gst/gstcaps.h: ditto.
	* gst/gstpad.c: (gst_real_pad_class_init),
	(gst_pad_link_call_link_functions), (gst_pad_try_set_caps),
	(gst_pad_set_explicit_caps), (gst_pad_get_caps):  In try_set_caps,
	check new caps against existing caps -- if they're the same, return
	OK without renegotiating.  caps-nego-failed signal fixed so that
	the marshaller isn't VOID__OBJECT.  Also changed to G_TYPE_POINTER
	to save an extra caps copy.  Don't complete negotiation if a pad
	link function returns DELAYED.

2004-01-02  Benjamin Otte  <in7y118@public.uni-hamburg.de>

	* gst/gstpad.c: (gst_pad_try_relink_filtered):
	  Fix wrong g_return_if_fail

2004-01-03  Jan Schmidt  <thaytan@mad.scientist.com>

	* gst/gstbin.c: (gst_bin_class_init):
	Change the marshalling of element_added/element_removed
	to use gst_marshal_VOID__OBJECT, since gst_marshal_VOID__POINTER 
	complains that GST_TYPE_ELEMENT is not G_TYPE_POINTER

2004-01-01  David Schleef  <ds@schleef.org>

	* gst/gstpad.c: (gst_pad_set_explicit_caps),
	(gst_pad_explicit_getcaps), (gst_pad_explicit_link),
	(gst_pad_use_explicit_caps):
	* gst/gstpad.h:
	Add new functions.  gst_pad_use_explicit_caps() sets up a pad
	to use an internal getcaps and link fuction so that negotiation
	always results in the explicitly set caps.
	gst_pad_set_explicit_caps() sets the explicit caps.  These functions
	are particularly useful for decoders.

2003-12-31  David Schleef  <ds@schleef.org>

	* gst/elements/gstidentity.c: (gst_identity_class_init),
	(gst_identity_init), (gst_identity_chain),
	(gst_identity_set_property), (gst_identity_get_property):
	* gst/elements/gstidentity.h: