@@ -154,7 +154,6 @@ gst_element_class_init (GstElementClass *klass)
   klass->change_state 			= GST_DEBUG_FUNCPTR (gst_element_change_state);
   klass->error	 			= GST_DEBUG_FUNCPTR (gst_element_error_func);
   klass->found_tag	 		= GST_DEBUG_FUNCPTR (gst_element_found_tag_func);
-  klass->padtemplates 			= NULL;
   klass->numpadtemplates 		= 0;
 
   klass->elementfactory			= NULL;
@@ -164,9 +163,13 @@ static void
 gst_element_base_class_init (gpointer g_class)
 {
   GObjectClass *gobject_class = G_OBJECT_CLASS (g_class);
+  GstElementClass *element_class = GST_ELEMENT_CLASS (g_class);
+
 
   gobject_class->set_property =		GST_DEBUG_FUNCPTR(gst_element_real_set_property);
   gobject_class->get_property =		GST_DEBUG_FUNCPTR(gst_element_real_get_property);
+
+  element_class->padtemplates = NULL;
 }
 
 static void
